--- a/index.html
+++ b/index.html
@@ -95,12 +95,7 @@
 
             <h2>About Me</h2>
 
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-            voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-            voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
-            sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
-            Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.
+            <p>I am Software Development Engineer at Microsoft Hyderabad working in Microsoft Partner Network helping Microsoft partners to achieve more. I am responsible for maintaing the ETL pipeline and help in driving business decisions which are backed by data. Currently I am working on technologies like Databricks( Apache Spark ), Scala, Cosmos(Microsoft Big data platform), Datagrid, Xflow, Sql. I have a Bachelor's degree in Information Technology from National Institute of Technology, Allahabad. I am passionate about competitive programming and have participated in ACM - ICPC regionals in 2016, 2017. I find peace in reading, music and sleep :P.
             </p>
 
             <div class="row">
