--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
    <!--- Basic Page Needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Ceevee - Free Responsive HTML5/CSS3 Template</title>
-	<meta name="description" content="">
-	<meta name="author" content="">
+	<title>Aditya Agarwal</title>
+	<meta name="description" content="Portfolio">
+	<meta name="author" content="Aditya Agarwal">
 
    <!-- Mobile Specific Metas
    ================================================== -->
@@ -104,12 +104,13 @@
 
                   <h2>Contact Details</h2>
                   <p class="address">
-						   <span>Jonathan Doe</span><br>
-						   <span>1600 Amphitheatre Parkway<br>
-						         Mountain View, CA 94043 US
+						   <span>Aditya Agarwal</span><br>
+						   <span>D1606, 7 Hills, Kokapet<br>
+						         Hyderabad, Telangana<br>
+                           500075, India
                      </span><br>
-						   <span>(123)456-7890</span><br>
-                     <span>anyone@website.com</span>
+						   <span>(+91)995-698-6175</span><br>
+                     <span>aditya.mnnit15@gmail.com</span>
 					   </p>
 
                </div>
@@ -147,15 +148,14 @@
 
                <div class="twelve columns">
 
-                  <h3>University of Life</h3>
-                  <p class="info">Master in Graphic Design <span>&bull;</span> <em class="date">April 2007</em></p>
+                  <h3>Motilal Nehru National Institute of Technology Allahabad</h3>
+                  <p class="info"> B.Tech in Information Technology<span>&bull;</span> <em class="date">July 2014 - May 2018</em></p>
 
-                  <p>
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                  Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-                  ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-                  Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
-                  </p>
+                  <ul>
+                    <li>Cumulative GPA : 8.6/10.</li>
+                    <li>Under top 10 in Department. </li>
+                    <li>Computer Club Coordinator</li>
+                  </ul>
 
                </div>
 
