--- a/index.html
+++ b/index.html
@@ -165,15 +165,14 @@
 
                <div class="twelve columns">
 
-                  <h3>School of Cool Designers</h3>
-                  <p class="info">B.A. Degree in Graphic Design <span>&bull;</span> <em class="date">March 2003</em></p>
+                  <h3>Montfort Inter College</h3>
+                  <p class="info">High School and Intermediate <span>&bull;</span> <em class="date">March 2013</em></p>
 
-                  <p>
-                  This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                  Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                  nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
-                  ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat
-                  </p>
+                  <ul>
+                    <li>First of my class among a batch of 200 consecutively for 6 years.</li>
+                    <li>Awarded Excellence in Studies.</li>
+                    <li>Participated in various inter and intra school competitions</li>
+                  </ul>
 
                </div>
 
