--- a/index.html
+++ b/index.html
@@ -197,14 +197,11 @@
 
                <div class="twelve columns">
 
-                  <h3>Awesome Design Studio</h3>
-                  <p class="info">Senior UX Designer <span>&bull;</span> <em class="date">March 2010 - Present</em></p>
+                  <h3>Microsoft</h3>
+                  <p class="info">Software Development Engineer<span>&bull;</span> <em class="date">July 2018 - Present</em></p>
 
                   <p>
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                  Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-                  ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-                  Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
+                  I am involved in building and maintaing the data warehouse for Microsoft Partner Netorwk. Almost 95% of Microsoft revenue is driven by partners and we make sure that all microsoft partners are recognized and incentivized for their efforts. My work focuses on computing the performance of partners using the enormous data we have. Technologies used - Databricks, Scala, Cosmos, Datagrid, Xflow, Azure Data Lake, Azure Data factory, Xflow, Sql.
                   </p>
 
                </div>
@@ -215,14 +212,11 @@
 
                <div class="twelve columns">
 
-                  <h3>Super Cool Studio</h3>
-                  <p class="info">UX Designer <span>&bull;</span> <em class="date">March 2007 - February 2010</em></p>
+                  <h3>Media.net, Directi</h3>
+                  <p class="info">Software Development Intern <span>&bull;</span> <em class="date">May 2017 - July 2017</em></p>
 
                   <p>
-                  This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                  Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                  nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
-                  ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat
+                  Media.net is one of the top 5 adtech companies in the world. I worked in the spam analysis team where I enhanced the Browser fingerprinting efficiency and stability in order to track down and block spam users.
                   </p>
 
                </div>
