--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                   <p class="info">Software Development Engineer<span>&bull;</span> <em class="date">July 2018 - Present</em></p>
 
                   <p>
-                  I am involved in building and maintaing the data warehouse for Microsoft Partner Netorwk. Almost 95% of Microsoft revenue is driven by partners and we make sure that all microsoft partners are recognized and incentivized for their efforts. My work focuses on computing the performance of partners using the enormous data we have. Technologies used - Databricks, Scala, Cosmos, Datagrid, Xflow, Azure Data Lake, Azure Data factory, Xflow, Sql.
+                  I am involved in building and maintaing the data warehouse for Microsoft Partner Netorwk. Almost 95% of Microsoft revenue is driven by partners and we make sure that all microsoft partners are recognized and incentivized for their efforts. My work focuses on computing the performance of partners using the enormous data we have. Technologies used - Databricks, Scala, Cosmos, Datagrid, Xflow, Azure Data Lake, Azure Data factory, Sql.
                   </p>
 
                </div>
@@ -227,6 +227,33 @@
 
       </div> <!-- End Work -->
 
+      <!-- Research
+      ----------------------------------------------- -->
+      <div class="row work">
+
+         <div class="three columns header-col">
+            <h1><span>Research</span></h1>
+         </div>
+
+         <div class="nine columns main-col">
+
+            <div class="row item">
+
+               <div class="twelve columns">
+
+                  <h3>Motilal Nehru National Institute of Technology Allahabad</h3>
+                  <p class="info">B.Tech project<span>&bull;</span> <em class="date">July 2017 - May 2018</em></p>
+
+                   <ul>
+                    <li>Conversion of images of mathematical equation to Latex code using Deep Learning</li>
+                    <li>Clustering of sensor nodes in Wireless Sensor Network using Genetic Algorithm optimized K-means Algorithm</li>
+                  </ul>
+
+               </div>
+
+         </div> <!-- main-col end -->
+
+      </div> <!-- End Research -->
 
       <!-- Skills
       ----------------------------------------------- -->
