--- a/index.html
+++ b/index.html
@@ -223,37 +223,25 @@
 
             </div> <!-- item end -->
 
-         </div> <!-- main-col end -->
-
-      </div> <!-- End Work -->
-
-      <!-- Research
-      ----------------------------------------------- -->
-      <div class="row work">
-
-         <div class="three columns header-col">
-            <h1><span>Research</span></h1>
-         </div>
-
-         <div class="nine columns main-col">
-
             <div class="row item">
 
                <div class="twelve columns">
 
                   <h3>Motilal Nehru National Institute of Technology Allahabad</h3>
-                  <p class="info">B.Tech project<span>&bull;</span> <em class="date">July 2017 - May 2018</em></p>
+                  <p class="info">B.Tech research project<span>&bull;</span> <em class="date">July 2017 - May 2018</em></p>
 
-                   <ul>
+                  <ul>
                     <li>Conversion of images of mathematical equation to Latex code using Deep Learning</li>
                     <li>Clustering of sensor nodes in Wireless Sensor Network using Genetic Algorithm optimized K-means Algorithm</li>
                   </ul>
 
                </div>
 
+            </div> <!-- item end -->
+
          </div> <!-- main-col end -->
 
-      </div> <!-- End Research -->
+      </div> <!-- End Work -->
 
       <!-- Skills
       ----------------------------------------------- -->
