--- a/index.html
+++ b/index.html
@@ -243,21 +243,47 @@
 
       </div> <!-- End Work -->
 
-      <!-- Skills
-      ----------------------------------------------- -->
-      <div class="row skill">
+   <div class="row skill">
 
          <div class="three columns header-col">
-            <h1><span>Skills</span></h1>
+            <h1><span>Awards and Skills</span></h1>
          </div>
 
-         <div class="nine columns main-col">
+          <div class="row item">
 
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-            voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-            voluptatem sequi nesciunt.
-            </p>
+               <div class="twelve columns">
+
+                  <h3>ACM - ICPC</h3>
+
+                  <ul>
+                    <li>Rank 8 ACM ICPC Asia Kharagpur Regionals Contest 2017</li>
+                    <li>Rank 20 ACM ICPC Asia Kharagpur Regionals Contest 2016</li>
+                    <li>Rank 13 ACM ICPC Asia Amritapuri Regionals Contest 2016</li>
+                    <li>Rank 44 ACM ICPC Asia India Finals Contest 2016</li>
+                  </ul>
+
+               </div>
+
+            </div> <!-- item end -->
+
+            <div class="row item">
+
+               <div class="twelve columns">
+
+                  <h3>NATIONAL HACKATHONS</h3>
+
+                  <ul>
+                    <li>Winner, Data Science Hackathon 2018, Techgig</li>
+                    <li>Winner, Hack-a-heart Hackathon 2017, Aconex Ltd.</li>
+                    <li>Runner-up, Quantify 2017, Goldman Sachs</li>
+                    <li>Runner-up, Kronothon 2017, Kronos</li>
+                    <li>2nd Runner-up, Insomnia 2016, MNNIT Allahabad</li>
+                  </ul>
+
+               </div>
+
+            </div> <!-- item end -->
+
 
 				<div class="bars">
 
