--- a/index.html
+++ b/index.html
@@ -243,12 +243,14 @@
 
       </div> <!-- End Work -->
 
-   <div class="row skill">
+      <div class="row skill">
 
          <div class="three columns header-col">
             <h1><span>Awards and Skills</span></h1>
          </div>
 
+         <div class="nine columns main-col">
+            
           <div class="row item">
 
                <div class="twelve columns">
@@ -288,7 +290,7 @@
 				<div class="bars">
 
 				   <ul class="skills">
-					   <li><span class="bar-expand photoshop"></span><em>Photoshop</em></li>
+					   <li><span class="bar-expand photoshop"></span><em>C/ C++</em></li>
                   <li><span class="bar-expand illustrator"></span><em>Illustrator</em></li>
 						<li><span class="bar-expand wordpress"></span><em>Wordpress</em></li>
 						<li><span class="bar-expand css"></span><em>CSS</em></li>
