--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
                <div class="columns download">
                   <p>
-                     <a href="#" class="button"><i class="fa fa-download"></i>Download Resume</a>
+                     <a href="https://drive.google.com/file/d/1ftfaT6RpzCctvQruDvsnXYXCky2GLJmr/view?usp=sharing" class="button"><i class="fa fa-download"></i>Download Resume</a>
                   </p>
                </div>
 
