--- a/index.html
+++ b/index.html
@@ -58,13 +58,9 @@
             and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
             <hr />
             <ul class="social">
-               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-               <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-               <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-               <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-               <li><a href="#"><i class="fa fa-skype"></i></a></li>
+               <li><a href="https://www.facebook.com/007adityaagarwal"><i class="fa fa-facebook"></i></a></li>
+               <li><a href="https://www.linkedin.com/in/adityamnnit/"><i class="fa fa-linkedin"></i></a></li>
+               <li><a href="ttps://www.instagram.com/0aditya0"><i class="fa fa-instagram"></i></a></li>
             </ul>
          </div>
       </div>
@@ -299,13 +295,9 @@
          <div class="twelve columns">
 
             <ul class="social-links">
-               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-               <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-               <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-               <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-               <li><a href="#"><i class="fa fa-skype"></i></a></li>
+               <li><a href="https://www.facebook.com/007adityaagarwal"><i class="fa fa-facebook"></i></a></li>
+               <li><a href="https://www.linkedin.com/in/adityamnnit/"><i class="fa fa-linkedin"></i></a></li>
+               <li><a href="ttps://www.instagram.com/0aditya0"><i class="fa fa-instagram"></i></a></li>
             </ul>
 
             <ul class="copyright">
