--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="row banner">
          <div class="banner-text">
             <h1 class="responsive-headline">I'm Aditya Agarwal.</h1>
-            <h3>I'm a <span>Data Scientist</span>, currently working at <span>Microsoft</span> and having a bachelor's degree from <span>NIT Allahabd</span>. Let's <a class="smoothscroll" href="#about">start scrolling</a>
+            <h3>I'm a <span>Data Engineer</span>, currently working at <span>Microsoft</span> and having a bachelor's degree from <span>NIT Allahabd</span>. Let's <a class="smoothscroll" href="#about">start scrolling</a>
             and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
             <hr />
             <ul class="social">
@@ -88,7 +88,7 @@
 
             <h2>About Me</h2>
 
-            <p>I am Data Scientist at Microsoft Hyderabad working in Microsoft Partner Network helping Microsoft partners to achieve more. I am responsible for maintaing the ETL pipeline and help in driving business decisions which are backed by data. Currently I am working on technologies like Databricks( Apache Spark ), Scala, Cosmos(Microsoft Big data platform), Datagrid, Xflow, Sql. I have a Bachelor's degree in Information Technology from National Institute of Technology, Allahabad. I am passionate about competitive programming and have participated in ACM - ICPC regionals in 2016, 2017. I find peace in reading, music and sleep :P.
+            <p>I am Data Engineer at Microsoft Hyderabad working in Microsoft Partner Network helping Microsoft partners to achieve more. I am responsible for maintaing the ETL pipeline and help in driving business decisions which are backed by data. Currently I am working on technologies like Databricks( Apache Spark ), Scala, Cosmos(Microsoft Big data platform), Datagrid, Xflow, Sql. I have a Bachelor's degree in Information Technology from National Institute of Technology, Allahabad. I am passionate about competitive programming and have participated in ACM - ICPC regionals in 2016, 2017. I find peace in reading, music and sleep :P.
             </p>
 
             <div class="row">
@@ -191,7 +191,7 @@
                <div class="twelve columns">
 
                   <h3>Microsoft</h3>
-                  <p class="info">Data Scientist<span>&bull;</span> <em class="date">July 2018 - Present</em></p>
+                  <p class="info">Data Engineer<span>&bull;</span> <em class="date">July 2018 - Present</em></p>
 
                   <p>
                   I am involved in building and maintaing the data warehouse for Microsoft Partner Netorwk. Almost 95% of Microsoft revenue is driven by partners and we make sure that all microsoft partners are recognized and incentivized for their efforts. My work focuses on computing the performance of partners using the enormous data we have. Technologies used - Databricks, Scala, Cosmos, Datagrid, Xflow, Azure Data Lake, Azure Data factory, Sql.
